# KeyDive

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  LICENSE  LICENSE.txt  README.md  keydive.py  pyproject.toml  requirements.txt
docs/: DCSL.txt  FUNCTIONS.md  MKSHRC.md  PACKAGE.md  README.md  SYMBOLS.md  mkshrc  shell.sh
docs/Axinom/: axinom_rsa.p12
docs/Axinom/patch/: SampleChooserActivity.smali  axinom.apk  axinom_signed.apk  builder_mobile.py  config.yaml  patcher.py  samplelist.json
docs/Axinom/server/: HTTPToolkit_2024-04-17_16-19.htkrules  Manifest.mpd  app.py
docs/advanced/: CHALLENGE.md  DRM.md  FUNCTIONS.md
docs/server/: OFFLINE.md  kaltura.apk  server.py
docs/server/.assets/: a-eng-0096k-libopus-2c.webm  dash.mpd
docs/version/15.0.0/: symbols_AARCH64.xml
docs/version/17.0.0/: android.hardware.drm-service.widevine
docs/version/18.0.0/: android.hardware.drm-service.widevine  symbols.xml
extractor/: __init__.py  cdm.py  constants.py  keydive.js  script.js  uils.py  vendor.py
keydive/: __init__.py  __main__.py  adb.py  cdm.py  constants.py  core.py  keybox.py  keydive.js  utils.py  vendor.py
keydive/adb/: __init__.py  remote.py  vendor.py
keydive/drm/: __init__.py  cdm.py  device.py  keybox.py
keydive/drm/modules/: __init__.py  client.py  oemcrypto.py  provisioning.py
keydive/drm/protocol/: license_pb2.py  license_pb2.pyi
